2003-11-17  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add Help buttons to dialogs.
	* src/AddSpouse.py (on_spouse_help_clicked): Add function.
	* src/SelectChild.py (on_child_help_clicked): Add function.
	* src/Marriage.py (on_help_clicked): Add function.
	* src/EditPerson.py (on_help_clicked): Add function.
	* src/marriage.glade: Add Help button to a dialog.
	* src/edit_person.glade: Add Help button to a dialog.
	* src/dialog.glade: Add Help buttons to dialogs.
	* src/AddrEdit.py (on_help_clicked): Add function.
	* src/AttrEdit.py (on_help_clicked): Add function.
	* src/EventEdit.py (on_help_clicked): Add function.

2003-11-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: handle LDS status setting properly
	* src/RelLib.py: use LDS status for equality comparison

2003-11-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/dialog.glade: fixed sizes of dialog windows.

2003-11-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: Fixed typo

2003-11-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: delete unused code
	* src/GrampsCfg.py: Fixed name format selection problem
	* src/PeopleView.py: handle uncaught exception
	* src/RelLib.py: rebuild person table
	* src/gramps_main.py: rebuild display after preferences

2003-11-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ImageSelect.py (GlobalMediaProperties.__init__): Find labels 
	from XML; (redraw_attr_list): Change attribute label; 
	(display_refs): Change references label; 
	(on_notebook_switch_page): change notes label.
	* src/imagesel.glade: Set meaningful label ids, remove bold markup.
	
	* src/docgen/HtmlDoc.py (start_bold, end_bold): Add functions 
	(closes	bug #841277).
	
	* src/plugins/WebPage.py (IndividualPage.write_normal_row): 
	Add separators between the references (comma and space). 

	* src/data/templates/blue_edge.tpkg, src/data/templates/marble.tpkg,