@@ -1870,8 +1870,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label364">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Children&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;_Children&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -1880,6 +1880,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">chlist</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
@@ -1894,8 +1895,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label360">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Active person&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;_Active person&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -1904,6 +1905,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">ap_data</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
@@ -1918,8 +1920,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label362">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Active person's parents&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Active person's _parents&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -1928,6 +1930,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">ap_parents</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">3</property>
@@ -1942,8 +1945,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label361">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Relationship&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Relati_onship&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -1952,6 +1955,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">sp_list</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
@@ -1966,8 +1970,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label363">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Spouse's parents&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Spo_use's parents&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -1976,6 +1980,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">sp_parents</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">3</property>
@@ -2295,8 +2300,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label386">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Children&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;_Children&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -2305,6 +2310,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">chlist2</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
@@ -2559,8 +2565,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label390">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Spouse's parents&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Spo_use's parents&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -2569,6 +2575,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">sp_parents2</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">3</property>
@@ -2677,8 +2684,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label389">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Relationship&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Relati_onship&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -2687,6 +2694,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">sp_list2</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">3</property>
@@ -2795,8 +2803,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label387">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Active person&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;_Active person&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -2805,6 +2813,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">ap_data2</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
@@ -2819,8 +2828,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label388">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Active person's parents&lt;/b&gt;</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Active person's _parents&lt;/b&gt;</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -2829,6 +2838,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">ap_parents2</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">0</property>
